--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My First Webpage</title>
+    <title>Ankit Mishra</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -23,8 +23,8 @@
   <body>
     <h1>Hello, world!</h1>
     <div class="card">
-      <p>This is my first website hosted on <strong>GitHub Pages</strong>.</p>
-      <p>I can edit this file any time to change my content.</p>
+      <p>Hello <strong>GitHub Pages</strong>.</p>
+      <p>Coming soon.</p>
     </div>
   </body>
 </html>
