--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
             <div><b>Email:</b> <a href="mailto:ankitphy0592@gmail.com">ankitphy0592@gmail.com</a></div>
             <div><b>Location:</b> Singapore</div>
             <div><b>ORCID:</b> <a href="https://orcid.org/0000-0002-7641-4379" target="_blank" rel="noopener">0000-0002-7641-4379</a></div>
-            <div><b>LinkedIn:</b> <span>Ankit Mishra</span> <small>(add URL in code)</small></div>
+            <div><b>LinkedIn:</b> <span>Ankit Mishra</span> <small>(www.linkedin.com/in/ankit-mishra-86bb93121)</small></div>
           </div>
         </aside>
       </div>
